# vk-extract-phones-from-conversations

./: .gitignore  LICENSE  README.md  pyproject.toml
vk_extract_phones_from_conversations/: main.py
vk_extract_phones_from_conversations/api/: vk_api.py
vk_extract_phones_from_conversations/business/: conversations.py  phone_number_parser.py  report.py
vk_extract_phones_from_conversations/domain/: models.py
vk_extract_phones_from_conversations/utils/: requests_cache_decorator.py
